2005-06-06  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/plugin/rss-show.rb (rss_parse): use Hiki::Util::utf8_to_euc.
	* misc/plugin/trackback.rb (trackback_post): use Hiki::Util::utf8_to_euc.

2005-06-03  Masanori KADO  <QVE02451@nifty.com>
	* misc/plugin/rss-show.rb (rss_show): add an argument to set the number of items.

2005-05-30  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/parser.rb (Parser_default::inline_impl): treat as
	'reference' if interwiki's name is empty.

2005-05-24  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/util.rb (Util::sendmail): make a MIME encoded subject.
	(Util::send_updating_mail): use 'site_name' as a prefix of a
	subject (by kdmsnr).

2005-05-22  KOMATSU Shinichiro <koma2@lovepeers.org>
	* misc/plugin/attach/attach.cgi (attach_file): If the attached file 
	contains scripts, deny it. ([Hiki-dev:00747])

2005-05-21  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/image_size.rb (ImageSize::check_type): revise HTML
	detection algorithm.

2005-05-21  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/image_size.rb (ImageSize::check_type): revise HTML
	detection algorithm.

	* misc/plugin/attach/attach.rb (attach_download): use 'image_size'
	library and set 'Content-Disposition: inline' if an attached file
	is an image.
	* hiki/image_size.rb: add a new file made by Keisuke Minami.
	(ImageSize::mime_type): add a new method.
	(ImageSize::check_type): treat as non-image file if 'script' tags
	are included.

	* misc/hikifarm/index.cgi: support symlinks.

2005-05-21  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hikifarm/{index.cgi,hikifarm.conf,template/*}: separate
	template files of Hikifarm.

2005-05-21  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: support RSS output and add a link to a
	wiki without any page by Kouhei Sutou.

	* misc/hikifarm/index.cgi: define 'hikifarm_path' automatically.

2005-05-19  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/hikifarm/index.cgi: support hiki.conf made by hiki 0.6.x.
