@@ -1,4 +1,7 @@
 2005-06-06  Kouhei Yanagita <sugi@dream.big.or.jp>
+	* misc/plugin/{rss-show.rb,trackback.rb}: remove needless `require's.
+
+2005-06-06  Kouhei Yanagita <sugi@dream.big.or.jp>
 	* misc/plugin/rss-show.rb (rss_parse): use Hiki::Util::utf8_to_euc.
 	* misc/plugin/trackback.rb (trackback_post): use Hiki::Util::utf8_to_euc.
 
